--- a/style.css
+++ b/style.css
@@ -1,69 +1,70 @@
-body{
-    background-color:#778899;
-    font-family: 'Roboto'sans-serif;
+body {
+    background-color: #001f4f;
+    font-family: "Raleway", sans-serif;
 }
-.signup-box{
-    width: 360px;
-    height: 620px;
-    background-color: white;
-    margin: auto;
-    border-radius: 5px;
+  
+.container {
+    width: 350px;
+    height: 500px;
+    background-color: #fff;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    border-radius: 20px;
 }
-    .login{
-        width: 360px;
-        height: 280px;
-        background-color: white;
-        margin: auto;
-        border-radius: 5px;
-}
-h1{
-    text-align: center;
-    margin-top: 15px;
-
-}
-h4{
-    text-align: center;
-
-}
-form{
+  
+h1 {
+    position: absolute;
+    left: 50%;
+    top: -60px;
     width: 300px;
-  margin-left: 20px;
-}
-form label{
-    display: flex;
-    margin-top: 15px;
+    transform: translateX(-50%);
+    background-color: #ff851b;
+    color: #fff;
+    font-weight: 100;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
     font-size: 18px;
-    
+    text-align: center;
+    padding: 10px;
 }
-input{
-    width: 100%;
-    padding: 7px;
+  
+.wrapper {
+    padding: 20px;
+}
+  
+input,
+select {
+    width: 80%;
     border: none;
-    border: 1px solid gray;
-    border-radius:5px ;
+    border-bottom: 1px solid #0074d9;
+    padding: 10px;
+}
+  
+input:focus,
+select:focus {
+    border: 1px solid #0074d9;
     outline: none;
 }
-input[type="button"]{
-    width: 320px;
-    height: 35px;
+  
+select {
+    width: 88% !important;
+}
+  
+button {
+    margin: 20px auto;
+    width: 150px;
+    height: 50px;
+    background-color: #39cccc;
+    color: #fff;
+    font-size: 16px;
     border: none;
-    margin-top: 20px;
-    background-color: #49c153;
-    color: white;
-    font-size: 18px;
+    border-radius: 5px;
 }
-p{
-text-align: center;padding-top: 20px;
-font-size: 15px;
-padding-top: 20px;
-}
-.already{
+  
+.tip {
     text-align: center;
-    color: white;
-    font-size: 15px;
-    margin-top: -10px;
-
-}
-.already a{
-    color: #49c153;
+    font-size: 18px;
+    display: none;
 }
